# alsa_rnnoise_fork

./: 60-rnnoise.conf  README.md  README.rst  meson.build  meson_options.txt
.builds/: debian.yml  readme.yml
src/: main.c
